<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_AgilentPTM" Id="{cabd0058-3dd4-4905-9b15-54411322c9ff}">
    <Declaration><![CDATA[TYPE ST_AgilentPTM EXTENDS ST_PTM :
STRUCT

(* Inputs *)
    (* 24V in Ramp state; 0V for others *)
    {attribute 'pytmc' := '
    pv: START;
    field: ZNAM FALSE;
    field: ONAM TRUE;
    io: i;
    '}
    i_xSTART :	BOOL;

    (* setpoint related to frequency *)
    {attribute 'pytmc' := '
    pv: R1Status;
    field: ZNAM FALSE;
    field: ONAM AT SPEED;
    io: i;
    '}
    i_xR1	:  BOOL;

    (* setpoint related to Power *)
    {attribute 'pytmc' := '
    pv: R2Status;
    field: ZNAM FALSE;
    field: ONAM TRUE;
    io: i;
    '}
    i_xR2	:  BOOL;

    (* low speed mode *)
    {attribute 'pytmc' := '
    pv: LSPD;
    field: ZNAM FALSE;
    field: ONAM TRUE;
    io: i;
    '}
    i_xLSpd	:  BOOL;


    (* Fault input*)
    //i_xFault : BOOL;  Inherit ST_PTM.xFault



(* controls *)
    (* Start/Stop -
        q_RunDo ;   Inherit ST_PTM.
     *)

    (* Low speed control *)
    {attribute 'pytmc' := '
    pv: LSPD_DO;
    field: ZNAM FALSE;
    field: ONAM TRUE;
    io: i;
    '}
    q_xLSpd		:  BOOL;

    (*Soft start *)
    {attribute 'pytmc' := '
    pv: XSS_DO;
    field: ZNAM FALSE;
    field: ONAM TRUE;
    io: i;
    '}
    q_xSS   	:  BOOL;

    (*pump Lock*)
    {attribute 'pytmc' := '
    pv: FaultLock;
    field: ZNAM FALSE;
    field: ONAM TRUE;
    io: i;
    '}
    xPumpFaultLock : BOOL := FALSE;
    // i_xPumpLockReset: BOOL := FALSE; Inherit ST_PTM.xReset
    // Error messages
    {attribute 'pytmc' := '
    pv: ErrorMessage;
    io: i;
    '}
    sError : STRING;
    {attribute 'pytmc' := '
    pv: Power_MON;
    io: i;
    field: PREC 2
    field: EGU "W";
    '}
    i_rPowerMon : REAL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>